# task-tracker

./: .gitignore  CMakeLists.txt  README.md  TaskTracker.sln
.github/workflows/: test.yml
Installer/: Installer.cpp  Installer.vcxproj  Installer.vcxproj.filters  tasktracker_data.h
Installer/x64/Debug/: Installer.exe.recipe  Installer.ilk  vc143.idb
Installer/x64/Debug/Installer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Installer/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
TaskTracker/: Installer.cpp  Task Tracker.cpp  TaskTracker.cpp  TaskTracker.vcxproj
TaskTracker/x64/Debug/: TaskTracker.exe.recipe  TaskTracker.ilk  vc143.idb
TaskTracker/x64/Debug/TaskTracker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TaskTracker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TaskTracker/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
installer/: CMakeLists.txt
installer/inc/: installerUtils.hpp  installer_utils.hpp  registryUtils.hpp  registry_utils.hpp  systemUtils.hpp
installer/src/: installer.cpp  installerUtils.cpp  installer_utils.cpp  registryUtils.cpp  registry_utils.cpp  systemUtils.cpp  tasktracker.rc
shared/: CMakeLists.txt
shared/inc/: fileUtils.hpp  file_utils.hpp  log.hpp  systemUtils.hpp  system_utils.hpp
shared/src/: fileUtils.cpp  file_utils.cpp  log.cpp  systemUtils.cpp  system_utils.cpp
shared/tests/: CMakeLists.txt  shared_test.cpp
src/: installer.cpp
tasktracker/: CMakeLists.txt
tasktracker/inc/: tasktracker_utils.hpp
tasktracker/src/: tasktracker.cpp  tasktracker_utils.cpp
