set(SHARED_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(SHARED_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/inc")

file(GLOB_RECURSE SHARED_INC CONFIGURE_DEPENDS
  ${SHARED_INC_DIR}/*.h
  ${SHARED_INC_DIR}/*.hpp
)
file(GLOB_RECURSE SHARED_SRC CONFIGURE_DEPENDS
  ${SHARED_SRC_DIR}/*.c
  ${SHARED_SRC_DIR}/*.cpp
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/inc PREFIX "Header Files" FILES ${SHARED_INC})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src PREFIX "Source Files" FILES ${SHARED_SRC})

add_library(Shared STATIC ${SHARED_INC} ${SHARED_SRC})

target_include_directories(Shared PUBLIC ${SHARED_INC_DIR})
